# tldr-fijinews-api

./: .gitignore  README.md  extractors.py  main.py  models.py  pyproject.toml  requirements.txt  summarize.py  test.py  vercel.json
api/: __init__.py
notebooks/: Notebook.ipynb
