[tool.poetry]
name = "webscraping-fijinews"
version = "0.1.0"
description = "scraping news for fiji"
authors = ["Mohammed Ahad"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start-api = "uvicorn api:app --reload"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
sumy = "^0.11.0"
setuptools = "^74.1.2"
lxml = "^5.3.0"
lxml-html-clean = "^0.2.2"
numpy = "^2.1.1"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
beanie = "^1.26.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
